--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,29 +2,37 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Products</title>
+<title>Tasks</title>
+<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
 	<h2 th:text="'Hello, ' + ${username} + '!'" />
 	<p>
 		<a href="/logout">Sign out here</a>
 	</p>
-	<h2>These are all the products:</h2>
+	<h2>These are all the tasks:</h2>
 	<table>
 		<thead>
 			<tr>
 				<th>Topic</th>
-				<th>Description</th>
+ 				<th>Description</th> 
+ 				
 			</tr>
 		<tbody>
 			<tr th:if="${tasks.empty}">
 				<td colspan="2">No Tasks Available</td>
 			</tr>
 			<tr th:each="task : ${tasks}">
-				<td><span th:text="${task.topic}"> Topic </span></td>
-				<td><span th:text="${task.description}"> Description </span></td>
+				<td><span th:text="${task.subject}"> Topic </span></ 
 			</tr>
 		</tbody>
 	</table>
+	<div>
+		Boxes!!!!!
+		<div th:each="box : ${boxes}">
+			<div><span th:text="${box.name}">Task</span></div>
+		</div>
+	</div>
+	
 </body>
 </html>
